PVC: BUG: unable to handle page fault for address: 0000000000138124
<6>[ 1175.726159] Console: switching to colour dummy device 80x25
<7>[ 1175.726442] [IGT] xe_module_load: executing
<7>[ 1175.755943] [IGT] xe_module_load: starting subtest load
<4>[ 1176.315563] **********************************************************
<4>[ 1176.315567] ** NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE **
<4>[ 1176.315571] ** **
<4>[ 1176.315576] ** trace_printk() being used. Allocating extra memory. **
<4>[ 1176.315580] ** **
<4>[ 1176.315584] ** This means that this is a DEBUG kernel and it is **
<4>[ 1176.315588] ** unsafe for production use. **
<4>[ 1176.315592] ** **
<4>[ 1176.315596] ** If you see this message and you are not debugging **
<4>[ 1176.315599] ** the kernel, report this immediately to your vendor! **
<4>[ 1176.315603] ** **
<4>[ 1176.315607] ** NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE **
<4>[ 1176.315610] **********************************************************
<7>[ 1176.348141] xe 0000:aa:00.0: [drm:xe_pci_probe [xe]] XE_PVC 0bda:002f dgfx:1 gfx:Xe_HPC (12.60) media:none (0.00) display:no dma_m_s:52 tc:2
<7>[ 1176.348342] xe 0000:aa:00.0: [drm:xe_pci_probe [xe]] Stepping = (G:C0, M:**, D:**, B:B3)
<6>[ 1176.348531] xe 0000:aa:00.0: enabling device (0140 -> 0142)
<6>[ 1176.351525] xe 0000:aa:00.0: [drm] tile_count: 1, adj_tile_count 1
<1>[ 1176.351610] BUG: unable to handle page fault for address: 0000000000138124
<1>[ 1176.359435] #PF: supervisor read access in kernel mode
<1>[ 1176.365309] #PF: error_code(0x0000) - not-present page
<6>[ 1176.371170] PGD 0 P4D 0
<4>[ 1176.374119] Oops: 0000 [#1] PREEMPT SMP KASAN NOPTI
<4>[ 1176.379689] CPU: 46 PID: 1788 Comm: xe_module_load Not tainted 6.3.0-xe #1
<4>[ 1176.387490] Hardware name: Intel Corporation ArcherCity/ArcherCity, BIOS EGSDCRB1.86B.0087.D13.2208261706 08/26/2022
<4>[ 1176.399409] RIP: 0010:pcode_mailbox_rw+0xa5/0x540 [xe]
<4>[ 1176.405510] Code: 4c 02 00 00 e8 fc 2d 82 e0 8b 83 4c 02 00 00 44 8d b8 24 81 13 00 41 81 e7 ff ff 3f 00 49 8d 7e 28 e8 1f 2f 82 e0 4d 03 7e 28 <41> 8b 07 85 c0 0f 88 7d 04 00 00 4c 89 ef e8 c8 2d 82 e0 48 89 df
<4>[ 1176.426681] RSP: 0018:ffff888167597570 EFLAGS: 00010206
<4>[ 1176.432661] RAX: 0000000000000000 RBX: ffff8881ee1e8028 RCX: ffffffffa0c55c51
<4>[ 1176.440782] RDX: dffffc0000000000 RSI: ffff8881ee1ee070 RDI: ffff88823d986328
<4>[ 1176.448914] RBP: ffff8881ee1e8270 R08: ffffffffa0c55c1c R09: 0000000000000001
<4>[ 1176.457021] R10: 0000000000000001 R11: fffffbfff073f5c8 R12: 0000000000000000
<4>[ 1176.465150] R13: ffff888167597608 R14: ffff88823d986300 R15: 0000000000138124
<4>[ 1176.473277] FS: 00007fce158fa100(0000) GS:ffff888e3f700000(0000) knlGS:0000000000000000
<4>[ 1176.482466] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 1176.489018] CR2: 0000000000138124 CR3: 000000021754e004 CR4: 0000000000f70ee0
<4>[ 1176.497135] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4>[ 1176.505231] DR3: 0000000000000000 DR6: 00000000fffe07f0 DR7: 0000000000000400
<4>[ 1176.513336] PKRU: 55555554
<4>[ 1176.516473] Call Trace:
<4>[ 1176.519323] <TASK>
<4>[ 1176.521774] xe_pcode_try_request+0xe2/0x180 [xe]
<4>[ 1176.527390] ? __pfx_xe_pcode_try_request+0x10/0x10 [xe]
<4>[ 1176.533656] ? mod_find+0xd0/0xf0
<4>[ 1176.537498] xe_pcode_init.part.0+0x94/0x120 [xe]
<4>[ 1176.543108] ? __pfx_xe_pcode_init.part.0+0x10/0x10 [xe]
<4>[ 1176.549402] ? debug_mutex_init+0x40/0x50
<4>[ 1176.554009] xe_device_probe+0x13e/0x980 [xe]
<4>[ 1176.559193] xe_pci_probe+0x43e/0x610 [xe]
Edited by Adela Rybak